cambios al iniciar sesion

--- a/view/templates/album.html
+++ b/view/templates/album.html
@@ -249,7 +249,7 @@
 
     <!-- Botón para ir al artista -->
     <div class="artist-link">
-      <a href="artistas.html" id="artist-link" class="btn">IR AL ARTISTA</a>
+      <a href="/artistas" id="artist-link" class="btn">IR AL ARTISTA</a>
     </div>
   </main>
 
@@ -360,22 +360,7 @@
       }
     </script>
 
-    <!-- Contenedor para insertar el footer dinámicamente -->
-  <div id="footer"></div>
 
-  <!-- Script para cargar footer.html -->
-  <script>
-    // Esta función "fetch" trae el contenido de footer.html
-    // y lo inyecta dentro del div con id="footer"
-    fetch('footer.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('footer').innerHTML = data;
-      })
-      .catch(error => {
-        console.error('Error al cargar el footer:', error);
-      });
-  </script>
   
   <!-- Incluir el archivo album.js -->
   <script src="/static/js/album.js"></script>
