--- a/view/templates/albumes_subidos.html
+++ b/view/templates/albumes_subidos.html
@@ -1,16 +1,35 @@
-  <!-- Contenedor para insertar el footer dinámicamente -->
-  <div id="footer"></div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>UnderSounds - Albumes subidos</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/static/css/styles.css">
+</head>
+<body>
 
-  <!-- Script para cargar footer.html -->
+
+  {% include "header.html" %}
   <script>
-    // Esta función "fetch" trae el contenido de footer.html
-    // y lo inyecta dentro del div con id="footer"
-    fetch('footer.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('footer').innerHTML = data;
-      })
-      .catch(error => {
-        console.error('Error al cargar el footer:', error);
-      });
+    document.addEventListener("DOMContentLoaded", function () {
+      updateCartCount();
+      updateCartDropdown();
+    });
   </script>
+
+
+
+
+
+
+
+
+
+
+
+
+{% include "footer.html" %}
+
+</body>
+</html>
