registro y login, queda hacerlo con la base de datos

--- a/view/templates/edit_perfil.html
+++ b/view/templates/edit_perfil.html
@@ -63,6 +63,17 @@
         <label for="profilePic">Imagen de perfil:</label>
         <input type="file" id="profilePic" name="profilePic" accept="image/*">
       </div>
+
+      <!-- Mostrar botón dependiendo del tipo de usuario -->
+      {% if user.tipo_usuario == "artist" %}
+        <div class="form-group">
+          <a href="/subir_album" class="edit-btn">Añadir álbum</a>
+        </div>
+      {% elif user.tipo_usuario == "sello" %}
+        <div class="form-group">
+          <a href="/gestion_sello" class="edit-btn">Gestionar sello</a>
+        </div>
+      {% endif %}
       
       <!-- Sección para actualizar contraseña -->
         <h2>Actualizar contraseña</h2>
@@ -83,6 +94,7 @@
         </div>
         
         <span id="passwordError" style="color: red;"></span>
+
       
         <a href="/" class="edit-btn">Guardar cambios</a>
     </form>
