--- a/view/templates/login.html
+++ b/view/templates/login.html
@@ -42,13 +42,18 @@
   <!-- Contenido principal: Iniciar sesión -->
   <main class="content login-page">
     <h2 class="logo">Iniciar Sesión</h2>
-    <form id="loginForm" class="form">
+    <form id="loginForm" class="form" method="post" action="/login">
       <label for="username">Correo o usuario:</label>
       <input type="text" id="username" name="username" required>
 
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password" required>
-      <span id="passwordError" style="color: red;"></span>
+      <!-- Aquí se muestra el error, controado por el view.py-->
+      <span id="passwordError" style="color: red;">
+        {% if error %}
+          {{ error }}
+        {% endif %}
+      </span>
       <button type="submit" class="btn">Iniciar sesión</button>
     </form>
     <div class="login-options">
@@ -132,6 +137,7 @@
     });
   </script>-->
 
+  <!--
   <script>
     document.getElementById('loginForm').addEventListener('submit', function(event) {
       event.preventDefault(); // Evita que el formulario se envíe normalmente
@@ -164,7 +170,7 @@
         document.getElementById('password').value = '';
       }
     });
-  </script>
+  </script>-->
 
 
 
