--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -95,13 +95,13 @@
             <img src="static/images/futuro.jpeg" alt="Future Nostalgia" class="card-img">
             <div class="card-caption">Future Nostalgia</div>
           </a>
-          <a href="/album?id=17" class="card">
-            <img src="static/images/discovery.jpeg" alt="Discovery" class="card-img">
-            <div class="card-caption">Discovery</div>
+          <a href="/album?id=3" class="card">
+            <img src="static/images/x100pre.jpeg" alt="X 100pre" class="card-img">
+            <div class="card-caption">X 100pre</div>
           </a>
-          <a href="/album?id=18" class="card">
-            <img src="static/images/blue.jpeg" alt="Kind of Blue" class="card-img">
-            <div class="card-caption">Kind of Blue</div>
+          <a href="/album?id=7" class="card">
+            <img src="static/images/vibras.jpeg" alt="Vibras" class="card-img">
+            <div class="card-caption">Vibras</div>
           </a>
         </div>
       </div>
@@ -140,21 +140,21 @@
     <div class="bestofs-songs">
       <h3>Mejores Canciones</h3>
       <div class="row">
-        <a href="/cancion?id=9" class="card">
-          <img src="static/images/heaven.jpeg" alt="Stairway to Heaven" class="card-img">
-          <div class="card-caption">Stairway to Heaven</div>
+        <a href="/cancion?id=7" class="card">
+          <img src="static/images/karol-g.jpeg" alt="Tusa" class="card-img">
+          <div class="card-caption">Tusa</div>
         </a>
         <a href="/cancion?id=10" class="card">
-          <img src="static/images/prayer.jpg" alt="Like a Prayer" class="card-img">
-          <div class="card-caption">Like a Prayer</div>
+          <img src="static/images/ariana-grande.jpeg" alt="Positions" class="card-img">
+          <div class="card-caption">Positions</div>
         </a>
-        <a href="/cancion?id=11" class="card">
-          <img src="static/images/more_time.jpg" alt="One More Time" class="card-img">
-          <div class="card-caption">One More Time</div>
+        <a href="/cancion?id=8" class="card">
+          <img src="static/images/david-guetta.jpeg" alt="Titanium" class="card-img">
+          <div class="card-caption">Titanium</div>
         </a>
-        <a href="/cancion?id=12" class="card">
-          <img src="static/images/so_what.jpg" alt="So What" class="card-img">
-          <div class="card-caption">So What</div>
+        <a href="/cancion?id=9" class="card">
+          <img src="static/images/foo-fighters.jpg" alt="Everlong" class="card-img">
+          <div class="card-caption">Everlong</div>
         </a>
       </div>
     </div>
@@ -164,21 +164,21 @@
     <div class="album-section">
       <h3>Mejores Álbumes</h3>
       <div class="row">
-        <a href="/album?id=19" class="card">
-          <img src="static/images/led_IV.jpg" alt="Led Zeppelin IV" class="card-img">
-          <div class="card-caption">Led Zeppelin IV</div>
+        <a href="/album?id=5" class="card">
+          <img src="static/images/parachutes.jpg" alt="Parachutes" class="card-img">
+          <div class="card-caption">Parachutes</div>
         </a>
-        <a href="/album?id=20" class="card">
-          <img src="static/images/thriller.jpeg" alt="Thriller" class="card-img">
-          <div class="card-caption">Thriller</div>
+        <a href="/album?id=8" class="card">
+          <img src="static/images/18months.jpg" alt="18 Months" class="card-img">
+          <div class="card-caption">18 Months</div>
         </a>
-        <a href="/album?id=21" class="card">
-          <img src="static/images/ram.jpeg" alt="Random Access Memories" class="card-img">
-          <div class="card-caption">Random Access Memories</div>
+        <a href="/album?id=11" class="card">
+          <img src="static/images/kg0516.jpeg" alt="KG0516" class="card-img">
+          <div class="card-caption">KG0516</div>
         </a>
-        <a href="/album?id=22" class="card">
-          <img src="static/images/blue_train.jpg" alt="Blue Train" class="card-img">
-          <div class="card-caption">Blue Train</div>
+        <a href="/album?id=9" class="card">
+          <img src="static/images/thecolourandtheshape.jpg" alt="The Colour and the Shape" class="card-img">
+          <div class="card-caption">The Colour and the Shape</div>
         </a>
       </div>
     </div>
