--- a/view/templates/tienda.html
+++ b/view/templates/tienda.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
+
   <!-- Inyección del header 
   <div id="header-placeholder"></div>
   <script>
@@ -49,31 +50,31 @@
     <!-- Sección de CDs -->
     <section id="cds" class="tab-content active">
       <h2>CDs</h2>
-      <div class="row" id="cds-row"></div>
+      <div class="row" id="cds"></div>
     </section>
 
     <!-- Sección de Cassettes -->
     <section id="cassettes" class="tab-content">
       <h2>Cassettes</h2>
-      <div class="row" id="cassettes-row"></div>
+      <div class="row" id="cassettes"></div>
     </section>
 
     <!-- Sección de Vinilos -->
     <section id="vinilos" class="tab-content">
       <h2>Vinilos</h2>
-      <div class="row" id="vinilos-row"></div>
+      <div class="row" id="vinilos"></div>
     </section>
 
     <!-- Sección de Merchandising -->
     <section id="merchandising" class="tab-content">
       <h2>Merchandising</h2>
-      <div class="row" id="merchandising-row"></div>
+      <div class="row" id="merchandising"></div>
     </section>
 
     <!-- Sección de Otros -->
     <section id="otros" class="tab-content">
       <h2>Otros</h2>
-      <div class="row" id="otros-row"></div>
+      <div class="row" id="otros"></div>
     </section>
   </main>
 
