--- a/view/templates/generos especifico.html
+++ b/view/templates/generos especifico.html
@@ -27,7 +27,6 @@
       padding: 30px; 
       max-width: 1200px; 
       margin: 0 auto;
-      height: auto;
     }
     .card {
       display: flex;               /* Para usar flexbox */
@@ -41,7 +40,7 @@
       margin-top: 100px;
       transition: transform 0.3s;
     }
-
+    
     .card:hover {
       transform: scale(1.08);
       background-color: transparent; /* Mantiene el fondo blanco al pasar el ratón */
@@ -69,6 +68,62 @@
       text-align: center;
       padding: 20px;
       margin-top: 50px;
+    }
+  
+    #songs-container {
+      display: flex;
+      justify-content: center;
+    }
+  
+    .track-list {
+      list-style: none;
+      padding: 0;
+      margin: 2rem auto;    /* auto a los lados centra */
+      width: 80%;           /* ajústalo al % que quieras */
+      max-width: 600px;     /* opcional */
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+      overflow: hidden;
+    }
+    
+    .track {
+      padding: 1rem;
+      border-bottom: 1px solid #eee;
+      transition: background-color 0.2s;
+    }
+    
+    .track:last-child {
+      border-bottom: none;
+    }
+    
+    .track:hover {
+      background-color: #f8f9fa;
+    }
+    
+    .track-link {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-decoration: none;
+      color: inherit;
+    }
+    
+    .track-img {
+      max-width: 200px; /* La imagen no será más ancha que 400px */
+      max-height: 150px; /* La imagen no será más alta que 300px */
+      width: auto;
+      height: auto; /* Elimina espacios extra abajo de la imagen */
+    }
+    
+    .track-title {
+      flex: 1;
+      font-weight: 600;
+      margin: 0 1rem;
+    }
+    
+    .track-duration {
+      color: #777;
     }
   </style>
 </head>
@@ -152,12 +207,12 @@
 
   {% include "footer.html" %}
 
-
   <div id="data-generos"
-       data-generos='{{ generos | tojson }}'>
+       data-generos='{{ generos | tojson }}'
+       data-canciones='{{ canciones | tojson }}'>
   </div>
 
-  
+
 
   <!-- Carga de scripts -->
   <script src="/static/js/generos.js"></script>
