--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -95,13 +95,13 @@
             <img src="static/images/futuro.jpeg" alt="Future Nostalgia" class="card-img">
             <div class="card-caption">Future Nostalgia</div>
           </a>
-          <a href="/album?id=3" class="card">
-            <img src="static/images/x100pre.jpeg" alt="X 100pre" class="card-img">
-            <div class="card-caption">X 100pre</div>
+          <a href="/album?id=16" class="card">
+            <img src="static/images/yhlqmdlg.jpg" alt="YHLQMDLG" class="card-img">
+            <div class="card-caption">YHLQMDLG</div>
           </a>
-          <a href="/album?id=7" class="card">
-            <img src="static/images/vibras.jpeg" alt="Vibras" class="card-img">
-            <div class="card-caption">Vibras</div>
+          <a href="/album?id=17" class="card">
+            <img src="static/images/colores.jpg" alt="Colores" class="card-img">
+            <div class="card-caption">Colores</div>
           </a>
         </div>
       </div>
