--- a/view/templates/footer.html
+++ b/view/templates/footer.html
@@ -9,8 +9,8 @@
       <!-- Enlaces principales -->
       <nav class="footer-links">
         <a href="/terminos">Términos</a>
-        <a href="privacidad.html">Privacidad</a>
-        <a href="contacto.html">Contacto</a>
+        <a href="/privacidad">Privacidad</a>
+        <a href="/contacto">Contacto</a>
       </nav>
   
       <!-- Redes sociales + bandera -->
